# engine-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.user.3d44094  LICENSE  README.md  engine.sln  envmap.tga  test.glb
engine/: engine.vcxproj  engine.vcxproj.filters
engine/src/: main.cpp
engine/src/components/: light.h  quickhull.cpp  quickhull.h  shape.cpp  shape.h  texturer.cpp  texturer.h  transform.cpp  transform.h
engine/src/core/: app.cpp  app.h  builder.h  ecs.cpp  ecs.h  engine.h  filesys.cpp  filesys.h  input.cpp  input.h  msg.cpp  msg.h  optional.hpp  types.cpp  types.h
engine/src/core/logging/: log.cpp  log.h  termcolor.hpp
engine/src/gfx/: api.cpp  api.h  filter.cpp  filter.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  imm.cpp  imm.h  light.cpp  light.h  material.cpp  material.h  mesher.cpp  mesher.h  shader.cpp  shader.h  texture.cpp  texture.h
engine/src/gfx/glad/: glad.c  glad.h
engine/src/imgui/: imconfig.h  imgui_impl.cpp  imgui_impl.h  imgui_user.cpp  imgui_user.h
engine/src/math/: aabb.cpp  aabb.h  consts.h  frustum.cpp  frustum.h  mat.cpp  mat.h  quat.cpp  quat.h  vec.cpp  vec.h
engine/src/shaders/: brdf.glsl  brdfLUTF.glsl  cmF.glsl  cmIrradianceF.glsl  cmIrradianceV.glsl  cmPreFilterF.glsl  cmV.glsl  common.glsl  dofF.glsl  finalF.glsl  fxaaF.glsl  gbufferF.glsl  gbufferInstV.glsl  gbufferV.glsl  lightingF.glsl  lightingV.glsl  pickingF.glsl  screenF.glsl  shadowF.glsl  shadowInstV.glsl  shadowV.glsl  tonemapF.glsl
engine/src/systems/: physics_system.cpp  physics_system.h  renderer.cpp  renderer.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
